--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jkmysql-easy": "^1.4.0"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jkmysql-easy": "^1.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.10.1"
   }
 }
