--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "login-signup-react": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
