--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jkmysql-easy": "^1.4.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "testingnpmbe": "file:testingnpmbe-1.2.0.tgz"
   }
 }
