--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "createcontroller": "create controller",
+    "createmodel": "create model",
+    "createroute": "create route"
   },
   "keywords": [],
   "author": "",
